# docker-External-Knowledge-Base

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  bash-nginx.sh  bash.sh  commit_message.txt  docker-compose.yml  docker-up-logs.sh  explore_ods.py  knowledge_base_config.yaml  knowledge_base_config.yaml.example  logs-api.sh  logs-mcp.sh  logs.sh  main.py  package.json  pyproject.toml  run-mcp-test-docker.sh  startup.sh  test_retrival.sh  verify_ods_images.py
cache/tei/: .gitignore
documents/: API.md  CONFIG.md  ENV.md  STRUCTURE.md
documents/dify/: .gitignore  fix_term.yml
documents/rclone/: 2.locale.sh  3.mount.md
knowledge_base/configs/: .gitignore  example.yml  example_document.yml  example_sheet_fields.yml  example_sheet_image_gsheet.yml  example_sheet_image_ods.yml  example_sheet_image_xlsx.yml
knowledge_base/files/: .gitignore  example_fields.xlsx  shopping_cart.ods  shopping_cart.xlsx
knowledge_base_configs/: .gitignore  example.yml  example_document.yml  example_sheet_image_xlsx.yml  speech_profile.yml
knowledge_base_files/: .gitignore
mcp/: Dockerfile  mpc_server.py  requirements.txt
mcp_server/: Dockerfile  mcp_server.py
nginx/: nginx.conf
python_packages/embedding/: get_embedding.py  wait_for_embedding_service.py
python_packages/file_host/: file_host.py
python_packages/hello/: __init__.py
python_packages/index/: check_file_need_update_automatically.py  get_chunks_from_file.py  index.py  index_dir.py  index_file.py  ingest.py
python_packages/ingest/: __init__.py  convert_dir_to_markdown.py  convert_file_path_to_markdown_content.py  convert_file_to_markdown.py  download_file.py  fire_and_forget_ingest.py  get_knowledge_base_config.py  ingest.py
python_packages/knowledge_base_config/: get_knowledge_base_config.py  get_section_name.py  google_doc_slide_validator.py  is_existed_not_md.py  is_google_slide_url.py  parse_knowledge_id.py  url_converter.py
python_packages/retrieval/: db_retrieval.py  hello_routes.py  mock_retrieval.py  retrieval.py
python_packages/update/: update.py
python_packages/upload_file/: upload_file.py
python_packages/weaviate/: README.md  __init__.py  weaviate_add.py  weaviate_clear_relative_path.py  weaviate_close.py  weaviate_collection_delete.py  weaviate_item_delete.py  weaviate_item_ready.py  weaviate_query.py  weaviate_ready.py
rclone/: 1.install_rclone.sh
src/api/: Dockerfile  api.py  entrypoint.sh  pyproject.toml
src/markdown_converter/: Dockerfile  entrypoint.sh  markdown_converter.py  pyproject.toml
src/markdown_converter/.disabled/marker_pdf_endpoint/: converter.py  routes.py
src/markdown_converter/marker_pdf_endpoint/: converter.py  routes.py
src/markdown_converter/markitdown/: __init__.py  markitdown.py
src/markdown_converter/markitdown_endpoint/: convert_sheet_to_markdown.py  converter.py  image_describe.py  process_image_description.py  routes.py
src/markdown_converter/markitdown_endpoint/utils/: get_section_name.py  sheet_to_json.py
src/markdown_converter/process_image_description/: process_image_description.py
src/mcp_server/: Dockerfile  mcp_server.py  pyproject.toml  requirements.txt  scrape_web_page.py  search_knowledge_base.py  search_news.py  search_web.py
test/: mcp-test-docker-common.sh  run-mcp-test-docker-scrape-web-page.sh  run-mcp-test-docker-search-knowledge-base.sh  run-mcp-test-docker-search-news.sh  run-mcp-test-docker-search-web.sh  run-test-search-knowledge-base.sh  run-test-search-news.sh  test_retrival.sh
(+128 files in other folders)
