[project]
name = "docker-external-knowledge-base"
version = "0.1.0"
dependencies = [
    "Flask",
    "gunicorn",
    "Werkzeug",
    "PyYAML",
    "requests",
    "MarkItDown", # Added for converting HTML to Markdown as per user feedback
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
