[project]
name = "docker-external-knowledge-base"
version = "0.1.0"
dependencies = [
    "Flask[async]==2.3.3",
    "gunicorn==21.2.0",
    "Werkzeug==2.3.8",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "markitdown==0.1.3",
    "redis==5.0.1",
    "weaviate-client==4.11.1",
    "regex==2023.12.25",
    "tiktoken==0.5.2",
    "pyexcel==0.6.7",
    "pyexcel-ods==0.6.0",
    "pyexcel-xlsx==0.6.0",
    "openpyxl==3.0.10"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
