[project]
name = "docker-external-knowledge-base-markdown-converter"
version = "0.1.0"
dependencies = [
    "Flask[async]==2.3.3",
    "gunicorn==21.2.0",
    "requests==2.33.1",
    "markitdown[all]==0.1.3",
    # "marker-pdf[full]==1.10.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
