[project]
name = "docker-external-knowledge-base-markdown-converter"
version = "0.1.0"
dependencies = [
    "Pillow>=10.0.0",
    "Flask[async]==2.3.3",
    "gunicorn==21.2.0",
    "requests==2.33.1",
    "redis==5.0.1",
    "markitdown[all]==0.1.3",
    "tiktoken==0.9.0",
    "pyexcel==0.6.7",
    "pyexcel-ods==0.6.0",
    "pyexcel-xlsx==0.6.0",
    # 修改這裡：從 3.1.2 降級回 3.0.10，因為 pyexcel-xlsx 與 openpyxl 3.1.0+ 不相容
    "openpyxl==3.0.10", 
    "split_markdown4gpt==1.0.9",
    "googlenewsdecoder==0.1.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
