[project]
name = "external-knowledge-mcp-server"
version = "0.1.0"
dependencies = [
    "fastmcp==2.14.4",
    "gunicorn==21.2.0",
    "requests==2.32.3",
    "PyYAML==6.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "mcp_server",
    "search_knowledge_base",
    "scrape_web_page",
    "search_web",
    "search_news",
]
